# h_vs

./: .gitmodules  CMakeLists.txt  README.md  package.xml  requirements.txt
action/: h_vs.action
config/: cam_params.yml  gain_params.yml  h_vs_params.yml
homography_generators/: __init__.py  base_homography_generator.py
homography_generators/utils/: conversions.py  feature_homography.py
include/h_vs/: h_vs.hpp  homography_2d_vs.h
launch/: h_vs.launch.py  h_vs_data_collect.launch copy.py  h_vs_data_collect.launch.py  homography_2d_vs.launch
msg/: pairwise_distance.msg
python/: control_gallery_node.py  h_gen_calibration_pattern_node.py  h_gen_endoscopy_calibration_pattern_node.py  h_gen_endoscopy_stored_views_node.py  h_gen_node.py
python/homography_generators/: __init__.py  base_homography_generator.py  calibration_pattern_homography_generator.py  deep_homography_generator.py  endoscopy_calibration_pattern_homography_generator.py  endoscopy_homography_generator.py  stored_view_homography_generator.py
scripts/: h_gen_data_collect_node.py  h_gen_node.py
src/: h_vs.cpp  h_vs_node.cpp  homography_2d_vs.cpp
srv/: capture.srv  k_intrinsics.srv
