<?xml version="1.0"?>
<package format="2">
  <name>h_vs</name>
  <version>0.0.0</version>
  <description>The h_vs implements 'Homography-based 2D Visual Servoing'</description>

  <maintainer email="martin.huber@kcl.ac.uk">mhubii</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>camera_info_manager</depend>
  <depend>rospy</depend>
  <depend>camera_info_manager_py</depend>
  <depend>eigen</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>eigen_conversions</depend>
</package>